# crazyflie_platform

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: control_modes.yaml
include/crazyflie_platform/: crazyflie_platform.hpp
launch/: crazyflie_platform_launch.py
src/: crazyflie_node.cpp  crazyflie_platform.cpp
